[package]
name = "ndrpc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sys-info = "*"
sysinfo = "*"
discord-rich-presence = "*"
chrono = "*"
serde = { version = "*", features = ["derive"] }
serde_yaml = "*"
anyhow = "*"

[target.'cfg(windows)'.dependencies]
wmi = "*"