[package]
name = "ndrpc"
version = "1.0.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sys-info = "*"
sysinfo = "*"
discord-rich-presence = "*"
chrono = "*"
serde = { version = "*", features = ["derive"] }
serde_yaml = "*"
anyhow = "*"
minreq =  { version = "*", features = ["https", "json-using-serde"] }
crossterm = "*"

[target.'cfg(windows)'.dependencies]
wmi = "*"