[package]
name = "ndrpc"
version = "1.0.4"
edition = "2021"
authors = ["Nikon <github.com/INikonI>"]
license = "MIT"
description = "Discord rich presence client"
repository = "https://github.com/INikonI/ndrpc"
homepage = "https://github.com/INikonI/ndrpc"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "*"
sys-info = "*"
sysinfo = "*"
discord-rich-presence = "*"
chrono = "*"
serde = { version = "*", features = ["derive"] }
serde_yaml = "*"
anyhow = "*"
minreq =  { version = "*", features = ["https", "json-using-serde"] }
crossterm = "*"

[target.'cfg(windows)'.dependencies]
wmi = "*"